--- a/portfolio_starter_editable.html
+++ b/portfolio_starter_editable.html
@@ -9,33 +9,35 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg1:#0f1724; /* dark */
-      --bg2:#08122a;
-      --accent:#8E2DE2; /* purple */
-      --muted:#94a3b8;
-      --card:#0b1220;
-      --glass: rgba(255,255,255,0.04);
+      --bg1:#ff9a9e;
+      --bg2:#fad0c4;
+      --accent:#fbc2eb;
+      --accent2:#a6c1ee;
+      --text:#1f1f1f;
+      --muted:#6b7280;
+      --card:rgba(255,255,255,0.6);
+      --glass: rgba(255,255,255,0.4);
       --maxw:1100px;
       font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-      color: #e6eef8;
+      color: var(--text);
     }
     *{box-sizing:border-box}
     body{margin:0;background:linear-gradient(180deg,var(--bg1),var(--bg2));-webkit-font-smoothing:antialiased;}
     .container{max-width:var(--maxw);margin:48px auto;padding:24px}
     header{display:flex;gap:20px;align-items:center}
-    .avatar{width:120px;height:120px;border-radius:16px;flex:0 0 120px;background:linear-gradient(135deg,var(--accent),#00c6ff);display:grid;place-items:center;font-weight:800;color:white;font-size:28px}
+    .avatar{width:120px;height:120px;border-radius:16px;flex:0 0 120px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:grid;place-items:center;font-weight:800;color:white;font-size:28px}
     .hero h1{margin:0;font-size:clamp(24px,4vw,40px);}
     .hero p{color:var(--muted);margin:8px 0 0}
     .buttons{margin-top:12px;display:flex;gap:12px}
     .btn{background:var(--accent);border:none;padding:10px 14px;border-radius:10px;color:white;font-weight:600;text-decoration:none}
-    .btn.ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
+    .btn.ghost{background:transparent;border:1px solid rgba(0,0,0,0.15);color:var(--muted)}
     main{display:grid;grid-template-columns:1fr 340px;gap:28px;margin-top:28px}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));padding:18px;border-radius:14px;box-shadow:0 6px 18px rgba(2,6,23,0.6)}
+    .card{background:var(--card);padding:18px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.15);backdrop-filter:blur(10px)}
     .projects{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:12px}
     .project{padding:12px;border-radius:10px;background:var(--glass);}
     .project h4{margin:0 0 6px}
     .skills{display:flex;flex-wrap:wrap;gap:8px}
-    .skill{background:rgba(255,255,255,0.03);padding:8px 10px;border-radius:999px;font-size:13px;color:var(--muted)}
+    .skill{background:rgba(255,255,255,0.7);padding:8px 10px;border-radius:999px;font-size:13px;color:var(--text)}
     aside .section{margin-bottom:16px}
     footer{margin-top:36px;text-align:center;color:var(--muted);font-size:13px}
     @media (max-width:900px){main{grid-template-columns:1fr} .projects{grid-template-columns:1fr}}
